--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                     <li><a href="#" class="active">דף הבית</a></li>
                     <li><a href="pages/leaderboards.html">טבלאות מובילים</a></li>
                     <li><a href="pages/training.html">תוכניות אימון</a></li>
+                    <li><a href="pages/challenges.html">אתגרים</a></li>
                     <li><a href="pages/about.html">אודות</a></li>
                     <li><a href="pages/contact.html">צור קשר</a></li>
                 </ul>
