feat: Complete Firebase Authentication System
✅ Core Authentication Features:
- Firebase Authentication integration with session management
- User Registration for Players and Scouts with type management
- Secure Login/Logout with complete storage cleanup
- Admin user auto-creation and management
- Firestore user document synchronization
- Authentication state persistence across page reloads

🔧 Critical Bug Fixes:
- Eliminated fake localStorage-based auth system
- Fixed logout persistence issues
- Fixed admin panel access
- Resolved Firebase Auth/Firestore sync issues
- Fixed module loading conflicts
- Fixed infinite loading overlays

🧪 Testing Infrastructure:
- Jest framework with Firebase mocks
- Unit tests for AuthManager
- Integration tests for UI auth flows
- Comprehensive bug prevention tests

📁 Core Files:
- js/auth-manager.js - Firebase authentication manager
- js/login.js - Login form handling
- js/registration.js - User registration system
- js/main.js - Main app with auth integration
- config/firebase.js - Firebase configuration
- Comprehensive test suite

--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-storage.js"></script>
     
     <!-- Application Scripts -->
-    <script src="js/main.js" defer></script>
-    <script src="config/firebase.js" type="module"></script>
-    <script src="auth/auth.js" type="module"></script>
-    <script src="auth/auth-integration.js" type="module"></script>
-    <script src="js/registration.js" type="module"></script>
+    <script src="config/firebase.js"></script>
+    <script src="js/utils.js" type="module"></script>
+    <script src="js/auth-manager.js" type="module"></script>
+    <script src="js/login.js"></script>
+    <script src="js/registration.js"></script>
+    <script src="js/main.js"></script>
 </head>
 <body class="auth-loading">
     <!-- Authentication Loading Overlay -->
