--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     
     <!-- Application Scripts -->
     <script src="config/firebase.js"></script>
-    <script src="js/utils.js" type="module"></script>
-    <script src="js/auth-manager.js" type="module"></script>
+    <script src="js/utils.js"></script>
+    <script src="js/auth-manager.js"></script>
+    <script src="components/multi-stage-registration.js"></script>
     <script src="js/login.js"></script>
     <script src="js/registration.js"></script>
     <script src="js/main.js"></script>
