🔧 Fix authentication system loading issues
- Fix syntax errors in utils.js (window. function declarations)
- Convert ES6 imports to global window references in auth-manager.js
- Fix profile-manager.js export statements for non-module usage
- Add profile-manager.js to script loading order in index.html
- Remove extra closing brace in auth-manager.js
- Enhanced debugging for auth initialization failures

Resolves 'מערכת האימות לא זמינה' error by ensuring all dependencies load properly

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!-- Application Scripts -->
     <script src="config/firebase.js"></script>
     <script src="js/utils.js"></script>
+    <script src="js/profile-manager.js"></script>
     <script src="js/auth-manager.js"></script>
     <script src="components/multi-stage-registration.js"></script>
     <script src="js/login.js"></script>
