🔧 Fix all pages to use unified auth system
- Standardize script loading across all pages (training, challenges, discover, watchlist, leaderboards)
- Add missing Firebase SDK scripts to pages that didn't have them
- Convert all pages to use auth-manager.js instead of old auth.js
- Fix ES6 import issues in auth/auth.js and auth/firebase-auth.js
- Remove module type from script tags for consistency
- Update training.js to use window.authManager instead of old auth object

Resolves JavaScript errors and makes all pages accessible

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -16,11 +16,11 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-storage.js"></script>
     
     <!-- Application Scripts -->
-    <script src="../config/firebase.js" type="module"></script>
-    <script src="../js/utils.js" type="module"></script>
-    <script src="../js/auth-manager.js" type="module"></script>
-    <script src="../js/profile-manager.js" type="module"></script>
-    <script src="../js/enhanced-profile.js" type="module"></script>
+    <script src="../config/firebase.js"></script>
+    <script src="../js/utils.js"></script>
+    <script src="../js/profile-manager.js"></script>
+    <script src="../js/auth-manager.js"></script>
+    <script src="../js/enhanced-profile.js"></script>
 </head>
 <body class="auth-loading">
     <!-- Authentication Loading Overlay -->
@@ -66,7 +66,7 @@
                     <div class="profile-sidebar">
                         <div class="profile-photo">
                             <div class="photo-container">
-                                <img id="profile-image" src="../images/default-profile.jpg" alt="תמונת פרופיל">
+                                <img id="profile-image" src="../images/default-profile.svg" alt="תמונת פרופיל">
                             </div>
                         </div>
                         <div class="profile-stats" id="profile-stats-section">
