--- a/pages/training.html
+++ b/pages/training.html
@@ -16,11 +16,11 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-storage.js"></script>
     
     <!-- Application Scripts -->
-    <script src="../js/main.js" defer></script>
-    <script src="../config/firebase.js" type="module"></script>
-    <script src="../auth/auth.js" type="module"></script>
-    <script src="../auth/auth-integration.js" type="module"></script>
-    <script src="../js/training.js" defer></script>
+    <script src="../config/firebase.js"></script>
+    <script src="../js/utils.js"></script>
+    <script src="../js/profile-manager.js"></script>
+    <script src="../js/auth-manager.js"></script>
+    <script src="../js/training.js"></script>
 </head>
 <body class="auth-loading">
     <!-- Authentication Loading Overlay -->
