--- a/pages/leaderboards.html
+++ b/pages/leaderboards.html
@@ -8,10 +8,18 @@
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/leaderboards.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <script src="../js/main.js" defer></script>
-    <script src="../auth/auth.js" defer></script>
-    <script src="../auth/auth-integration.js" defer></script>
-    <script src="../js/leaderboards.js" defer></script>
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-storage.js"></script>
+    
+    <!-- Application Scripts -->
+    <script src="../config/firebase.js"></script>
+    <script src="../js/utils.js"></script>
+    <script src="../js/profile-manager.js"></script>
+    <script src="../js/auth-manager.js"></script>
+    <script src="../js/leaderboards.js"></script>
 </head>
 <body>
     <header class="main-header">
